--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "backend-shirts-and-fruit": "file:",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "mongoose": "^8.6.0",
+    "morgan": "~1.9.1",
+    "nodemon": "^3.1.4"
   }
 }
