created methods: register, login and logout

--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
-    "seed:create": "node ./src/seeds/index.js",
-    "seed:destroy": "node ./src/seeds/index.js -d"
+    "seed:create": "node ./src/db/seeds/index.js",
+    "seed:destroy": "node ./src/db/seeds/index.js -d"
   },
   "dependencies": {
     "backend-shirts-and-fruit": "file:",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
     "morgan": "~1.9.1",
     "nodemon": "^3.1.4"
